Fix footer alignment to account for new blog link

--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -242,7 +242,7 @@ textarea {
 
 .LinksWrapper {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: space-between;
   width: 250px;
   > div > a {
